--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^6.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  # Firirbase
   cupertino_icons: ^1.0.2
   firebase_core: ^2.22.0
   firebase_auth: ^4.13.0
