--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.1
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
-  # Firirbase
+  # Firebase
   cupertino_icons: ^1.0.2
   firebase_core: ^2.22.0
   firebase_auth: ^4.13.0
