--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.1
-  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +40,9 @@ dependencies:
   firebase_core: ^2.22.0
   firebase_auth: ^4.13.0
   cloud_firestore: ^4.13.0
+  
+  intl: ^0.17.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
